# GexMaya

./: CMakeLists.txt  README.md  api.h  copy.py
MayaPlugin/: CMakeLists.txt
MayaPlugin/include/: Data.h  GraphView.h  MayaPlugin.h  MayaTypeRegistry.h  Nodes.h  Plugin.h  Types.h  UiTypes.h  defs.h
MayaPlugin/resources/: stylesheet.css
MayaPlugin/sources/: Data.cpp  GraphView.cpp  MayaPlugin.cpp  MayaTypeRegistry.cpp  Nodes.cpp  Plugin.cpp  Types.cpp
PythonWrapper/: CMakeLists.txt
PythonWrapper/includes/: module.h
PythonWrapper/resources/: __init__.py
PythonWrapper/sources/: module.cpp
